4B/cs444/tests/site/pass/pass_charliterals.joos
/* pass: char literals */
public class A {
  public A() {}
  protected char x = 'a';
}

