4B/cs444/tests/site/fail/fail_omittedconstructor.joos
/* fail: omitted constructor */
  public class A {
    /* public A() {} */
  }

